kubernetes/tech-stouffcapital-s3-ing-ssl.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-s3
  namespace: storage
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
spec:
  tls:
  - hosts:
    - s3.stouffcapital.tech
    secretName: s3-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: s3.stouffcapital.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: s3-minio-service
          servicePort: 9000
